--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ nodes/
 # chef-config
 chef-config/.bundle
 chef-config/Gemfile.lock
+chef-config/pkg
+
+# chef-binstubs
+chef-binstubs/.bundle
+chef-binstubs/Gemfile.lock
+chef-binstubs/pkg
