--- a/chef-binstubs/Rakefile
+++ b/chef-binstubs/Rakefile
@@ -1,1 +1,3 @@
-require "bundler/gem_tasks"
+# we need to force the install in order to overwrite the binstubs from
+# old chef gems.
+Bundler::GemHelper.install_tasks force: true
