--- a/chef-bin/Rakefile
+++ b/chef-bin/Rakefile
@@ -5,10 +5,10 @@ Bundler::GemHelper.install_tasks
 
 # this is necessary to use to overwrite any chef-14 or earlier era gem which has the bin files in
 # the chef gem itself
-desc "force install the chef-binstubs gem"
+desc "force install the chef-bin gem"
 task "install:force" do
-  sh "gem build -V chef-binstubs.gemspec"
-  built_gem_path = Dir["chef-binstubs-*.gem"].sort_by { |f| File.mtime(f) }.last
+  sh "gem build -V chef-bin.gemspec"
+  built_gem_path = Dir["chef-bin-*.gem"].sort_by { |f| File.mtime(f) }.last
   FileUtils.mkdir_p("pkg") unless Dir.exist?("pkg")
   FileUtils.mv(built_gem_path, "pkg")
   sh "gem install -f pkg/#{built_gem_path}"
